chore: migrate to rn 0.73 (#1936)
* chore: migrate to rn 0.73

* remove patches no more used and apply hack on android for video

* remove console log

* upgrade typescript

* fix: types

* update tests

* fix: unit test

* update to rn 0.73.1

--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -13,7 +13,7 @@ end
 node_require('react-native/scripts/react_native_pods.rb')
 node_require('react-native-permissions/scripts/setup.rb')
 
-platform :ios, 13.0
+platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
 setup_permissions([
@@ -49,16 +49,8 @@ abstract_target 'common' do
   end
   config = use_native_modules!
 
-  # Flags change depending on the env values.
-  flags = get_default_flags()
-
   use_react_native!(
     :path => config[:reactNativePath],
-    # Hermes is now enabled by default. Disable by setting this flag to false.
-    # Upcoming versions of React Native may rely on get_default_flags(), but
-    # we make it explicit here to aid in the React Native upgrade process.
-    :hermes_enabled => flags[:hermes_enabled],
-    :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
@@ -80,7 +72,6 @@ abstract_target 'common' do
       config[:reactNativePath],
       :mac_catalyst_enabled => false
     )
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
              config.build_settings['SWIFT_VERSION'] = '5.0'
