--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@octokit/rest": "^20.0.1",
     "@parcel/watcher": "^2.3.0",
+    "@react-native/babel-preset": "^0.73.18",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-hooks": "^8.0.1",
@@ -63,8 +64,8 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
-    "babel-jest": "^29.6.3",
-    "babel-plugin-formatjs": "^10.5.3",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-formatjs": "^10.5.10",
     "babel-plugin-module-resolver": "5.0.0",
     "babel-plugin-relay": "^14.1.0",
     "blessed": "^0.1.81",
@@ -81,7 +82,6 @@
     "git-spawned-stream": "^1.0.1",
     "jest": "^29.6.3",
     "jest-expo": "^49.0.0",
-    "metro-react-native-babel-preset": "^0.77.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.0.2",
@@ -91,7 +91,7 @@
     "tagged-versions": "^1.3.0",
     "ts-jest": "^29.1.1",
     "turbo": "^1.10.12",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "@types/react": "^18.2.37",
