--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -62,21 +62,22 @@
     "@expo-google-fonts/ultra": "^0.2.3",
     "@expo-google-fonts/water-brush": "^0.2.3",
     "@expo-google-fonts/yeseva-one": "^0.2.3",
-    "@formatjs/intl-locale": "^3.3.4",
-    "@formatjs/intl-pluralrules": "^5.2.6",
-    "@formatjs/intl-relativetimeformat": "^11.2.6",
-    "@hookform/resolvers": "^3.3.1",
-    "@react-native-async-storage/async-storage": "1.19.8",
+    "@formatjs/intl-locale": "^3.4.3",
+    "@formatjs/intl-pluralrules": "^5.2.10",
+    "@formatjs/intl-relativetimeformat": "^11.2.10",
+    "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.2",
-    "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.73.2",
     "@reeq/react-native-passkit": "^0.1.2",
-    "@sentry/react-native": "5.14.1",
+    "@sentry/react-native": "^5.15.1",
     "@shopify/flash-list": "1.6.3",
-    "@shopify/react-native-skia": "0.1.222",
+    "@shopify/react-native-skia": "^0.1.230",
+    "@types/chroma-js": "^2.4.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^49.0.21",
+    "expo": "^50.0.0-preview.4",
     "expo-av": "^13.6.0",
     "expo-blur": "^12.6.0",
     "expo-clipboard": "~4.5.0",
@@ -90,47 +91,47 @@
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
     "i18n-iso-countries": "^7.7.0",
-    "libphonenumber-js": "^1.10.51",
+    "libphonenumber-js": "^1.10.52",
     "lodash": "^4.17.21",
-    "lottie-react-native": "6.4.1",
+    "lottie-react-native": "^6.4.1",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.46.2",
-    "react-intl": "^6.4.7",
-    "react-native": "0.72.7",
+    "react-hook-form": "^7.49.2",
+    "react-intl": "^6.5.5",
+    "react-native": "0.73.1",
     "react-native-blob-jsi-helper": "^0.3.1",
-    "react-native-blob-util": "^0.19.4",
-    "react-native-bootsplash": "^5.1.3",
+    "react-native-blob-util": "^0.19.6",
+    "react-native-bootsplash": "^5.1.4",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-email-link": "^1.14.8",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-haptic-feedback": "^2.2.0",
-    "react-native-keyboard-controller": "^1.9.4",
+    "react-native-keyboard-controller": "^1.9.5",
     "react-native-localize": "^3.0.4",
     "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
-    "react-native-pager-view": "6.2.2",
+    "react-native-pager-view": "^6.2.3",
     "react-native-permissions": "^3.10.1",
     "react-native-qrcode-svg": "^6.2.0",
-    "react-native-quick-base64": "^2.0.7",
-    "react-native-reanimated": "~3.5.4",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "~3.25.0",
-    "react-native-share": "^10.0.1",
+    "react-native-quick-base64": "^2.0.8",
+    "react-native-reanimated": "~3.6.1",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "~3.29.0",
+    "react-native-share": "^10.0.2",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-toast-message": "^2.1.7",
-    "react-native-vision-camera": "^2.16.5",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vision-camera": "3.6.16",
     "react-phone-number-input": "^3.3.7",
     "react-relay": "^14.1.0",
     "rn-text-size": "4.0.0-rc.3",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.2"
+    "zod": "3.22.2"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^12.3.0",
-    "@types/chroma-js": "^2.4.1",
+    "@testing-library/react-native": "^12.4.2",
+    "@types/chroma-js": "^2.4.3",
     "@types/react": "^18.2.37",
     "@types/react-relay": "^14.1.6",
     "@types/react-test-renderer": "^18.0.3",
