build: update for jdk 17 and rn 0.73

--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -11,7 +11,7 @@
         "image": "latest"
       },
       "android": {
-        "image": "default"
+        "image": "latest"
       }
     },
     "development": {
