feat(CoverEdition): new loading/error indicator system (#2100)
* feat(CoverEdition): new loading/error indicator system

* Update CoverEditorCropModal.tsx

* Address PR feedbacks

* Update HomeProfilesCarousel.tsx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "typescript.tsdk": "./node_modules/typescript/lib",
   "editor.tabSize": 2,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
