--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -65,19 +65,19 @@
     "@formatjs/intl-locale": "^3.4.3",
     "@formatjs/intl-pluralrules": "^5.2.10",
     "@formatjs/intl-relativetimeformat": "^11.2.10",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native/metro-config": "^0.73.2",
+    "@react-native/metro-config": "0.73.3",
     "@reeq/react-native-passkit": "^0.1.2",
-    "@sentry/react-native": "^5.15.1",
+    "@sentry/react-native": "^5.15.2",
     "@shopify/flash-list": "1.6.3",
-    "@shopify/react-native-skia": "^0.1.230",
+    "@shopify/react-native-skia": "^0.1.233",
     "@types/chroma-js": "^2.4.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^50.0.0-preview.7",
+    "expo": "^50.0.0-preview.9",
     "expo-av": "^13.10.1",
     "expo-blur": "^12.9.1",
     "expo-clipboard": "~5.0.1",
@@ -91,47 +91,47 @@
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
     "i18n-iso-countries": "^7.7.0",
-    "libphonenumber-js": "^1.10.52",
+    "libphonenumber-js": "^1.10.53",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^6.4.1",
+    "lottie-react-native": "^6.5.1",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.49.3",
     "react-intl": "^6.5.5",
-    "react-native": "0.73.1",
+    "react-native": "0.73.2",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.6",
-    "react-native-bootsplash": "^5.1.4",
+    "react-native-bootsplash": "^5.2.2",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-email-link": "^1.14.8",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-haptic-feedback": "^2.2.0",
-    "react-native-keyboard-controller": "^1.10.0",
+    "react-native-keyboard-controller": "^1.10.1",
     "react-native-localize": "^3.0.4",
     "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-pager-view": "^6.2.3",
-    "react-native-permissions": "^4.0.2",
+    "react-native-permissions": "^4.0.4",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-quick-base64": "^2.0.8",
     "react-native-reanimated": "~3.6.1",
-    "react-native-safe-area-context": "^4.8.1",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-share": "^10.0.2",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "3.6.16",
-    "react-phone-number-input": "^3.3.7",
+    "react-native-vision-camera": "^3.7.0",
+    "react-phone-number-input": "^3.3.9",
     "react-relay": "^14.1.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.2"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^12.4.2",
+    "@testing-library/react-native": "^12.4.3",
     "@types/chroma-js": "^2.4.3",
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.47",
     "@types/react-relay": "^14.1.6",
     "@types/react-test-renderer": "^18.0.3",
     "@types/relay-test-utils": "^14.1.1",
