--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -76,14 +76,14 @@
     "@types/chroma-js": "^2.4.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^50.0.0-preview.9",
-    "expo-av": "^13.10.1",
+    "expo": "^50.0.0-preview.10",
+    "expo-av": "^13.10.2",
     "expo-blur": "^12.9.1",
     "expo-clipboard": "~5.0.1",
     "expo-contacts": "~12.8.2",
-    "expo-font": "~11.10.0",
+    "expo-font": "~11.10.1",
     "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.1",
+    "expo-image": "~1.10.3",
     "expo-linear-gradient": "~12.7.0",
     "expo-media-library": "~15.9.1",
     "expo-sensors": "~12.9.0",
@@ -104,10 +104,10 @@
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-email-link": "^1.14.8",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.14.1",
     "react-native-haptic-feedback": "^2.2.0",
-    "react-native-keyboard-controller": "^1.10.1",
-    "react-native-localize": "^3.0.4",
+    "react-native-keyboard-controller": "^1.10.2",
+    "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-pager-view": "^6.2.3",
@@ -121,8 +121,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^3.7.0",
-    "react-phone-number-input": "^3.3.9",
+    "react-native-vision-camera": "3.8.0",
     "react-relay": "^16.1.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.2"
