--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -61,29 +61,29 @@
     "@expo-google-fonts/ultra": "^0.2.3",
     "@expo-google-fonts/water-brush": "^0.2.3",
     "@expo-google-fonts/yeseva-one": "^0.2.3",
-    "@formatjs/intl-locale": "^3.4.3",
-    "@formatjs/intl-pluralrules": "^5.2.10",
-    "@formatjs/intl-relativetimeformat": "^11.2.10",
+    "@formatjs/intl-locale": "^3.4.5",
+    "@formatjs/intl-pluralrules": "^5.2.12",
+    "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "0.73.3",
     "@reeq/react-native-passkit": "^0.1.2",
-    "@sentry/react-native": "^5.15.2",
+    "@sentry/react-native": "^5.16.0",
     "@shopify/flash-list": "1.6.3",
-    "@shopify/react-native-skia": "^0.1.233",
+    "@shopify/react-native-skia": "^0.1.234",
     "@types/chroma-js": "^2.4.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^50.0.0-preview.10",
-    "expo-av": "^13.10.2",
+    "expo": "^50.0.2",
+    "expo-av": "^13.10.3",
     "expo-blur": "^12.9.1",
     "expo-clipboard": "~5.0.1",
     "expo-contacts": "~12.8.2",
-    "expo-font": "~11.10.1",
+    "expo-font": "~11.10.2",
     "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.3",
+    "expo-image": "~1.10.4",
     "expo-linear-gradient": "~12.7.0",
     "expo-media-library": "~15.9.1",
     "expo-sensors": "~12.9.0",
@@ -96,7 +96,7 @@
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-hook-form": "^7.49.3",
-    "react-intl": "^6.5.5",
+    "react-intl": "^6.6.1",
     "react-native": "0.73.2",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.6",
@@ -121,7 +121,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "3.8.0",
+    "react-native-vision-camera": "^3.8.2",
     "react-relay": "^16.1.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.2"
@@ -129,9 +129,9 @@
   "devDependencies": {
     "@testing-library/react-native": "^12.4.3",
     "@types/chroma-js": "^2.4.3",
-    "@types/react": "^18.2.47",
+    "@types/react": "^18.2.48",
     "@types/react-relay": "^16.0.6",
-    "@types/react-test-renderer": "^18.0.3",
+    "@types/react-test-renderer": "^18.0.7",
     "@types/relay-test-utils": "^14.1.4",
     "react-native-dotenv": "^3.4.9",
     "react-native-monorepo-tools": "^1.2.1",
