--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,5 @@ schema.graphql
 
 packages/backoffice/.vscode/settings.json
 
+# vscode
 .vscode/launch.json
-app-lang-keys.csv
-web-lang-keys.csv
