--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "relay:build": "relay-compiler",
     "relay:watch": "relay-compiler --watch ./relay.config.dev.js",
     "relay:prepare": "touch ./packages/web/src/persisted-query-map.json",
-    "i18n:extract": "node scripts/i18nextract.js",
-    "deploy:ios": "yarn workspace @azzapp/app deploy:ios",
-    "deploy:android": "yarn workspace @azzapp/app deploy:android",
+    "i18n:extract": "yarn workspace @azzapp/i18n extract",
+    "i18n:pull": "yarn workspace @azzapp/i18n pull",
+    "i18n:push": "yarn workspace @azzapp/i18n push",
     "run:ios": "yarn workspace @azzapp/app run:ios",
     "run:android": "yarn workspace @azzapp/app run:android",
     "update-graphql-schema": "yarn graphql-codegen",
