--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,9 +63,9 @@ jobs:
       ############################################
       - name: Pull translations
         if : github.ref_name == 'staging' || github.ref_name == 'stable'
-        run: yarn i18n:pull ${{ github.ref_name }}
+        run: yarn i18n:pull
         env:
-          LOKALISE_PROJECT_ID: ${{ secrets.LOKALISE_PROJECT_ID }}
+          LOKALISE_PROJECT_ID: ${{ vars.LOKALISE_PROJECT_ID }}
           LOKALISE_TOKEN: ${{ secrets.LOKALISE_TOKEN }}
 
       - name: Extract translations keys
@@ -75,7 +75,7 @@ jobs:
         if : github.ref_name == 'staging' || github.ref_name == 'stable'
         run: yarn i18n:push ${{ github.ref_name }}
         env:
-          LOKALISE_PROJECT_ID: ${{ secrets.LOKALISE_PROJECT_ID }}
+          LOKALISE_PROJECT_ID: ${{ vars.LOKALISE_PROJECT_ID }}
           LOKALISE_TOKEN: ${{ secrets.LOKALISE_TOKEN }}
 
       
