--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -18,7 +18,8 @@
       "extends": "base",
       "distribution": "internal",
       "android": {
-        "gradleCommand": ":app:assembleDebug"
+        "gradleCommand": ":app:assembleRelease",
+        "buildType": "apk"
       },
       "ios": {
         "buildConfiguration": "Release",
