--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -18,7 +18,7 @@
       "extends": "base",
       "distribution": "internal",
       "android": {
-        "gradleCommand": ":app:assembleRelease",
+        "gradleCommand": ":app:assembleDevelopmentRelease",
         "buildType": "apk"
       },
       "ios": {
@@ -38,6 +38,9 @@
         "buildConfiguration": "Release",
         "scheme": "azzapp-staging"
       },
+      "android": {
+        "gradleCommand": ":app:assembleStagingRelease"
+      },
       "env": {
         "NEXT_PUBLIC_URL": "https://azzapp-staging.vercel.app/",
         "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-staging.vercel.app/api",
@@ -49,6 +52,9 @@
       "ios": {
         "buildConfiguration": "Release",
         "scheme": "azzapp"
+      },
+      "android": {
+        "gradleCommand": ":app:bundleProductionRelease"
       },
       "env": {
         "NEXT_PUBLIC_URL": "https://azzapp.vercel.app/",
