--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
   },
   "resolutions": {
     "@types/react": "^18.2.45",
+    "zod": "3.22.4",
     "graphql": "^16.8.0",
     "node-pty": "1.0.0",
     "cliui": "^8.0.1"
