fix(android): try expo-camera on android (#2698)

--- a/packages/app/android/build.gradle
+++ b/packages/app/android/build.gradle
@@ -11,12 +11,20 @@ buildscript {
     }
     repositories {
         google()
-        mavenCentral()
+        mavenCentral()    
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+    }
+    allprojects {
+        repositories {
+            maven {
+                // expo-camera bundles a custom com.google.android:cameraview
+                url "$rootDir/../../../node_modules/expo-camera/android/maven"
+            }
+        }
     }
 }
 
