--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -68,59 +68,61 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native/metro-config": "0.73.3",
+    "@react-native/metro-config": "^0.73.5",
     "@reeq/react-native-passkit": "^0.1.3",
-    "@sentry/react-native": "^5.17.0",
+    "@sentry/react-native": "^5.18.0",
     "@shopify/flash-list": "1.6.3",
     "@shopify/react-native-skia": "^0.1.237",
     "@types/chroma-js": "^2.4.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^50.0.4",
-    "expo-av": "^13.10.4",
+    "expo": "^50.0.6",
+    "expo-av": "^13.10.5",
     "expo-blur": "^12.9.1",
+    "expo-camera": "^14.0.4",
     "expo-clipboard": "~5.0.1",
     "expo-contacts": "~12.8.2",
     "expo-font": "~11.10.2",
     "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.5",
+    "expo-image": "^1.10.6",
     "expo-linear-gradient": "~12.7.1",
     "expo-media-library": "~15.9.1",
     "expo-sensors": "~12.9.1",
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
-    "i18n-iso-countries": "^7.8.0",
-    "libphonenumber-js": "^1.10.54",
+    "i18n-iso-countries": "^7.10.0",
+    "libphonenumber-js": "^1.10.55",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.6.0",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.50.0",
     "react-intl": "^6.6.2",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.6",
     "react-native-bootsplash": "^5.3.0",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-email-link": "^1.15.0",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "~2.14.1",
+    "react-native-gesture-handler": "~2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
-    "react-native-keyboard-controller": "^1.10.3",
+    "react-native-keyboard-controller": "^1.10.5",
     "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-pager-view": "^6.2.3",
-    "react-native-permissions": "^4.1.0",
-    "react-native-qrcode-svg": "^6.2.0",
+    "react-native-permissions": "^4.1.1",
+    "react-native-qrcode-svg": "^6.3.0",
     "react-native-quick-base64": "^2.0.8",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-share": "^10.0.2",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
+    "react-native-video-duration": "^0.1.2",
     "react-native-vision-camera": "^3.8.2",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
@@ -129,7 +131,7 @@
   "devDependencies": {
     "@testing-library/react-native": "^12.4.3",
     "@types/chroma-js": "^2.4.3",
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.55",
     "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.0.7",
     "@types/relay-test-utils": "^14.1.4",
