--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -101,12 +101,13 @@
     "react-native": "^0.73.4",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.6",
-    "react-native-bootsplash": "^5.3.0",
+    "react-native-bootsplash": "^5.4.0",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-email-link": "^1.15.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-image-size": "^1.1.6",
     "react-native-keyboard-controller": "^1.10.6",
     "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.4.0",
@@ -135,7 +136,7 @@
     "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.0.7",
     "@types/relay-test-utils": "^14.1.4",
-    "react-native-dotenv": "^3.4.9",
+    "react-native-dotenv": "^3.4.10",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "relay-test-utils": "^16.2.0",
