--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -65,12 +65,12 @@
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.22.0",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.73.5",
     "@reeq/react-native-passkit": "^0.1.3",
-    "@sentry/react-native": "^5.18.0",
+    "@sentry/react-native": "^5.19.0",
     "@shopify/flash-list": "1.6.3",
     "@shopify/react-native-skia": "^0.1.238",
     "@types/chroma-js": "^2.4.4",
@@ -79,19 +79,19 @@
     "expo": "^50.0.6",
     "expo-av": "^13.10.5",
     "expo-blur": "^12.9.1",
-    "expo-camera": "^14.0.4",
     "expo-clipboard": "~5.0.1",
     "expo-contacts": "~12.8.2",
     "expo-font": "~11.10.2",
     "expo-haptics": "~12.8.1",
     "expo-image": "^1.10.6",
+    "expo-image-manipulator": "^11.8.0",
     "expo-linear-gradient": "~12.7.1",
     "expo-media-library": "~15.9.1",
     "expo-sensors": "~12.9.1",
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
     "i18n-iso-countries": "^7.10.0",
-    "libphonenumber-js": "^1.10.55",
+    "libphonenumber-js": "^1.10.56",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.6.0",
     "lz-string": "^1.5.0",
@@ -103,6 +103,7 @@
     "react-native-blob-util": "^0.19.6",
     "react-native-bootsplash": "^5.4.0",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-device-info": "^10.12.0",
     "react-native-email-link": "^1.15.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.15.0",
@@ -111,7 +112,7 @@
     "react-native-keyboard-controller": "^1.10.6",
     "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.4.0",
-    "react-native-mmkv": "^2.11.0",
+    "react-native-mmkv": "^2.12.1",
     "react-native-pager-view": "^6.2.3",
     "react-native-permissions": "^4.1.1",
     "react-native-qrcode-svg": "^6.3.0",
@@ -123,8 +124,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-video-duration": "^0.1.2",
-    "react-native-vision-camera": "^3.8.2",
+    "react-native-vision-camera": "^3.9.0",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.4"
