--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,7 +36,7 @@
     "lottie-web": "^5.12.2",
     "lz-string": "^1.5.0",
     "next": "^14.1.0",
-    "next-cloudinary": "6.0.0-beta.8",
+    "next-cloudinary": "^5.20.0",
     "os-browserify": "^0.3.0",
     "passkit-generator": "^3.1.11",
     "path-browserify": "^1.0.1",
