--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,14 +19,16 @@
     "@azzapp/shared": "0.5.5-canary.103",
     "@envelop/dataloader": "^6.0.0",
     "@envelop/generic-auth": "^7.0.0",
+    "@envelop/parser-cache": "^7.0.0",
     "@envelop/sentry": "^8.0.0",
+    "@envelop/validation-cache": "^7.0.0",
     "@graphql-yoga/plugin-disable-introspection": "^2.1.1",
     "@graphql-yoga/plugin-persisted-operations": "^3.1.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sendgrid/mail": "^7.4.6",
-    "@sentry/nextjs": "^7.93.0",
-    "@sentry/tracing": "^7.93.0",
-    "bcrypt-ts": "^5.0.1",
+    "@sentry/nextjs": "^7.102.0",
+    "@sentry/tracing": "^7.102.0",
+    "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
     "encoding": "^0.1.13",
     "google-wallet": "^1.0.16",
