fix(android): #2843 set status bar translucent (#2893)
* fix(android): #2843 set status bar translucent

* fix: move dimensions.get outside comp

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -65,7 +65,7 @@
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "^1.22.1",
+    "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.73.5",
@@ -88,10 +88,11 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-media-library": "~15.9.1",
     "expo-sensors": "~12.9.1",
+    "expo-status-bar": "^1.11.1",
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
     "i18n-iso-countries": "^7.10.0",
-    "libphonenumber-js": "^1.10.56",
+    "libphonenumber-js": "^1.10.57",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.6.0",
     "lz-string": "^1.5.0",
@@ -103,18 +104,18 @@
     "react-native-blob-util": "^0.19.6",
     "react-native-bootsplash": "^5.4.1",
     "react-native-confirmation-code-field": "^7.3.2",
-    "react-native-device-info": "^10.12.0",
+    "react-native-device-info": "^10.13.0",
     "react-native-email-link": "^1.15.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
-    "react-native-keyboard-controller": "^1.11.0",
+    "react-native-keyboard-controller": "^1.11.1",
     "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.1",
     "react-native-pager-view": "^6.2.3",
-    "react-native-permissions": "^4.1.2",
+    "react-native-permissions": "^4.1.4",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-quick-base64": "^2.0.8",
     "react-native-reanimated": "~3.7.1",
