--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
   <uses-feature android:name="android.hardware.camera" android:required="false" />
   <application android:name=".MainApplication" android:label="@string/app_name"
     android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round"
-    android:allowBackup="false" android:theme="@style/BootTheme"
+    android:allowBackup="false" android:theme="@style/AppTheme"
     android:requestLegacyExternalStorage="true"
     >
     <activity android:name=".MainActivity"
@@ -24,7 +24,8 @@
       android:launchMode="singleTask"
       android:windowSoftInputMode="adjustResize"
       android:exported="true"
-      android:screenOrientation="portrait">
+      android:screenOrientation="portrait"
+      android:theme="@style/BootTheme">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
