--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,12 +26,14 @@
     "@graphql-yoga/plugin-persisted-operations": "^3.1.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sendgrid/mail": "^7.4.6",
-    "@sentry/nextjs": "^7.102.0",
-    "@sentry/tracing": "^7.102.0",
+    "@sentry/nextjs": "^7.103.0",
+    "@sentry/tracing": "^7.103.0",
+    "@upstash/ratelimit": "^1.0.1",
+    "@vercel/kv": "^1.0.1",
     "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
     "encoding": "^0.1.13",
-    "google-wallet": "^1.0.16",
+    "google-wallet": "^1.0.18",
     "graphql-yoga": "^5.1.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
@@ -44,12 +46,12 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.6.1",
+    "react-intl": "^6.6.2",
     "semver": "^7.5.4",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
     "stream-browserify": "^3.0.0",
-    "twilio": "^4.15.0"
+    "twilio": "^4.23.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
@@ -57,6 +59,6 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vanilla-extract/dynamic": "^2.1.0",
-    "@vanilla-extract/next-plugin": "^2.3.3"
+    "@vanilla-extract/next-plugin": "^2.3.6"
   }
 }
