--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,8 @@
     "@envelop/parser-cache": "^7.0.0",
     "@envelop/sentry": "^8.0.0",
     "@envelop/validation-cache": "^7.0.0",
+    "@escape.tech/graphql-armor-max-aliases": "^2.3.0",
+    "@escape.tech/graphql-armor-max-tokens": "^2.3.0",
     "@graphql-yoga/plugin-disable-introspection": "^2.1.1",
     "@graphql-yoga/plugin-persisted-operations": "^3.1.1",
     "@paralleldrive/cuid2": "^2.2.2",
