fix: 🐛 add option to activate/deactivate offline (#2973)
* fix: 🐛 add option to activate/deactivate offline

* chore: 🤖 remove console

---------

Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=azzapp
 NEXT_PUBLIC_API_ENDPOINT=https://azzapp-staging.vercel.app/api
 NEXT_PUBLIC_URL=https://azzapp-staging.vercel.app/
 APP_SCHEME='azzapp://'
+USE_OFFLINE_CACHE=
