--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -65,14 +65,14 @@
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.73.5",
     "@reeq/react-native-passkit": "^0.1.3",
-    "@sentry/react-native": "^5.19.0",
+    "@sentry/react-native": "^5.19.1",
     "@shopify/flash-list": "1.6.3",
-    "@shopify/react-native-skia": "^0.1.240",
+    "@shopify/react-native-skia": "^0.1.241",
     "@types/chroma-js": "^2.4.4",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
@@ -99,18 +99,18 @@
     "react": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-intl": "^6.6.2",
-    "react-native": "^0.73.4",
+    "react-native": "^0.73.5",
     "react-native-blob-jsi-helper": "^0.3.1",
-    "react-native-blob-util": "^0.19.6",
+    "react-native-blob-util": "^0.19.8",
     "react-native-bootsplash": "^5.4.1",
     "react-native-confirmation-code-field": "^7.3.2",
-    "react-native-device-info": "^10.13.0",
+    "react-native-device-info": "^10.13.1",
     "react-native-email-link": "^1.15.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
-    "react-native-keyboard-controller": "^1.11.1",
+    "react-native-keyboard-controller": "^1.11.2",
     "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.1",
@@ -122,10 +122,10 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-share": "^10.0.2",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^15.0.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^3.9.0",
+    "react-native-vision-camera": "^4.0.0-beta.3",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.4"
@@ -133,11 +133,11 @@
   "devDependencies": {
     "@testing-library/react-native": "^12.4.3",
     "@types/chroma-js": "^2.4.4",
-    "@types/react": "^18.2.57",
+    "@types/react": "^18.2.61",
     "@types/react-relay": "^16.0.6",
     "@types/react-test-renderer": "^18.0.7",
     "@types/relay-test-utils": "^14.1.4",
-    "react-native-dotenv": "^3.4.10",
+    "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "relay-test-utils": "^16.2.0",
