--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -74,6 +74,7 @@
     "@shopify/flash-list": "1.6.3",
     "@shopify/react-native-skia": "^1.0.2",
     "@types/chroma-js": "^2.4.4",
+    "@types/react": "^18.2.65",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^50.0.11",
@@ -92,7 +93,7 @@
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
     "i18n-iso-countries": "^7.10.1",
-    "libphonenumber-js": "^1.10.57",
+    "libphonenumber-js": "^1.10.58",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.0",
     "lz-string": "^1.5.0",
@@ -124,7 +125,7 @@
     "react-native-svg": "^15.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^4.0.0-beta.3",
+    "react-native-vision-camera": "^4.0.0-beta.6",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.4"
