feat: Premium with Pro and MultiUser feature (#2615)
* Initial setup of revenue cat and database (#2614)

Feat premium webcard (#2617)

* feat: 🎸 add premium on webcard creation

✅ Closes: #2598

* chore: 🤖 clean premium management

* feat: 🎸 verify susbcription on publish

StoreKit settings

wip

use Storekit

add a test xcschme

feat: rework pro

feat: initial version of sbuscription api server

feat: list field

fix: test, lint

feat: section pro (#2653)

* feat: 🎸 Section Pro

implement initialPurchase

fix: rename database (type conflict with GraphQL Subscription)

feat: add subscription on UserResolver

implement availableSeats on resolver

fix: fix userId for RC

feat: save user info on revenueCat for CRM

feat: simple version of the server

feat: MultiUser paywall

process order buy multiuser

* Migration to a unique group of subscription

feeat: finish the paywall screen

fix: merging

* fix: button order HomeBottomPanel  fix #2582

* fix: LinearGradient

* jest: mock

wip

* feat: create a subscription mutation

* fix lint

* fix: rebasing and migration

* cherry pick change from the AppAzz app on another playstore

* implement new nico design

* fix: force user

* fix lint

* remove duplicate check

---------

Co-authored-by: Mickael Lecoq <mickael@lecoq.me>

--- a/codegen.yml
+++ b/codegen.yml
@@ -43,6 +43,7 @@ generates:
         ColorPalette: ../../domains#ColorPalette as ColorPaletteModel
         WebCardStatistic: ../../domains#WebCardStatistic as WebCardStatisticModel
         ProfileStatistic: ../../domains#ProfileStatistic as ProfileStatisticModel
+        UserSubscription: ../../domains#UserSubscription as UserSubscriptionModel
         WebCard: ../../domains#WebCard as WebCardModel
         User: ../../domains#User as UserModel
         RedirectWebCard: ../../domains#RedirectWebCard as RedirectWebCard
