--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -4,3 +4,7 @@ NEXT_PUBLIC_API_ENDPOINT=https://azzapp-staging.vercel.app/api
 NEXT_PUBLIC_URL=https://azzapp-staging.vercel.app/
 APP_SCHEME='azzapp://'
 USE_OFFLINE_CACHE=
+
+# PURCHASE (those value should work for the dev testing version)
+PURCHASE_ANDROID_KEY=goog_oeNrOyuTiDWViuGRRPpDIGlVKMR
+PURCHASE_IOS_KEY=appl_XWlrdgSwpfsScIXTNWeFxtyCqzz
