--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -114,6 +114,7 @@
     "react-native-pager-view": "^6.2.3",
     "react-native-permissions": "^4.1.5",
     "react-native-quick-base64": "^2.0.8",
+    "react-native-purchases": "^7.24.0",
     "react-native-reanimated": "~3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
