--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -32,7 +32,8 @@
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@lokalise/node-api": "^12.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
