build: add missing dependency fro drizzle-studio

--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "drizzle-kit": "0.20.14",
-    "node-fetch": "^3"
+    "node-fetch": "^3",
+    "mysql2": "^2.3.0"
   }
 }
