chore: 🤖 refacto backend (please merge 🥺) (#3222)
* chore: 🤖 refacto backend

* feat: 🎸 add use-case for invite user

* chore: 🤖 clean implementation of refacto

* feat: 🎸 setup unit test with sqlite

* feat: 🎸 setup e2e tests

* feat: 🎸 sync poc backend with last changes

* chore: 🤖 remove useless generated file

* feat: 🎸 remove dependency injection

* feat: 🎸 correctly use transaction manager

* feat: 🎸 complete rebase

* chore: 🤖 use-use type from graphql context

* chore: 🤖 sync poc with last changes

* chore: 🤖 configure app with new structure

* fix: 🐛 order import

--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-typescript": "7.24.1",
     "@babel/runtime": "^7.24.1",
+    "@babel/plugin-transform-modules-commonjs": "7.24.1",
     "@formatjs/cli-lib": "^6.3.8",
     "@graphql-codegen/add": "^5.0.2",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/schema-ast": "^4.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
+    "@graphql-tools/executor-http": "1.0.9",
     "@octokit/rest": "^20.0.2",
     "@parcel/watcher": "^2.4.1",
     "@react-native/babel-preset": "^0.75.0-main",
