--- a/packages/data/turbo.json
+++ b/packages/data/turbo.json
@@ -10,6 +10,9 @@
     "typecheck": {
       "dependsOn": ["^build"],
       "inputs": ["src/**"]
+    },
+    "test": {
+      "inputs": ["src/**", "jest.config.js", "scripts/jestSetup.js"]
     }
   }
 }
