--- a/packages/schema/tsconfig.build.json
+++ b/packages/schema/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "emitDeclarationOnly": true,
+    "esModuleInterop": true,
     "rootDir": "./src",
     "baseUrl": "./src",
     "outDir": "./lib",
@@ -16,6 +17,11 @@
     "tsconfig.json",
     "tsconfig.build.json",
     "babel.config.js",
+    "**/__mocks__/*",
+    "**/__tests__/*",
+    "jest.config.js",
+    "jest-e2e.config.js",
+    "testing",
     "**/__mocks__/*",
     "**/__tests__/*"
   ]
