--- a/packages/shared/tsconfig.lib.json
+++ b/packages/shared/tsconfig.lib.json
@@ -1,5 +1,16 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "moduleResolution": "node",
+    "resolvePackageJsonExports": false
+  },
   "exclude": [
     "node_modules",
     "lib",
