--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "generate-test-migration": "SQL_ENV=SQLITE drizzle-kit generate:sqlite --config ./testing/drizzle-test.config.ts",
     "build": "yarn compile && yarn definition",
     "dev": "yarn compile:watch & yarn definition:watch",
     "typecheck": "yarn definition",
@@ -20,7 +21,9 @@
     "definition:watch": "yarn definition --watch",
     "compile": "babel src --config-file ./babel.config.js -d lib --extensions '.ts,.tsx,.js,.jsx,.json'",
     "compile:watch": "yarn compile --watch",
-    "clean": "rm -rf lib && rm -f tsconfig.build.tsbuildinfo && rm -rf node_modules"
+    "clean": "rm -rf lib && rm -f tsconfig.build.tsbuildinfo && rm -rf node_modules",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:e2e": "NODE_OPTIONS=--experimental-vm-modules jest -c ./jest-e2e.config.js"
   },
   "devScripts": [
     "compile:watch",
