--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -5,12 +5,14 @@
     "baseUrl": "./src",
     "outDir": "./lib"
   },
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": [
     "node_modules",
     "lib",
     "scripts",
     "tsconfig.json",
     "tsconfig.lib.json",
-    "jest.config.js"
+    "jest.config.js",
+    "**/*.test.ts"
   ]
 }
