feat: add web payment mutations (#3297)
* feat: add web payment mutations

* add missing en var

* add missing en var

* add missing en var

* fix backoffice config

* fix config web app

* use type inference

* add shared package

* add indexes

* upgrade deps

* fix codegen

* ignore lib directory

* fix: path

* upgrade deps

* upgrade deps

* remove useless deps

* upgrade deps

* upgrade deps

* upgrade deps

* add missing dep in schema

* update payment module

* set utc timezone

* fix check active subscription

* put back check on modules

* add lifetime subscription

* chore: set sentry environments

* remove console.log

* update versions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "packages/data/lib",
     "packages/shared/lib",
     "packages/schema/lib",
+    "packages/payment/lib",
     "packages/web/.next",
     "trash"
   ],
