--- a/packages/backoffice/tsconfig.next.json
+++ b/packages/backoffice/tsconfig.next.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "paths": {
-      "@azzapp/shared/*": ["../shared/lib/*"],
+      "@azzapp/shared/*": ["../shared/src/*"],
       "#*": ["./src/*"]
     }
   }
