--- a/packages/web/tsconfig.next.json
+++ b/packages/web/tsconfig.next.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "paths": {
+      "@azzapp/shared/*": ["../shared/src/*"],
       "#*": ["./src/*"]
     }
   }
