--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "run:ios": "yarn workspace @azzapp/app run:ios",
     "run:android": "yarn workspace @azzapp/app run:android",
     "update-graphql-schema": "yarn graphql-codegen",
-    "clean": "yarn workspaces run clean && rm -Rf node_mdules && rm -f tsconfig.tsbuildinfo",
+    "clean": "yarn workspaces run clean && rm -Rf node_modules && rm -f tsconfig.tsbuildinfo",
     "release": "node ./scripts/release.js",
     "bump-version": "node ./scripts/bumpVersion.js",
     "write-dev-changelog": "node ./scripts/writeDevChangeLog.js",
-    "persist-queries": "yarn workspace @azzapp/web persist-queries"
+    "persist-queries": "yarn workspace @azzapp/web persist-queries",
+    "payment-api-client": "node ./scripts/generatePaymentApiClient.js"
   },
   "devScripts": [
     "relay:watch",
@@ -40,15 +41,15 @@
   ],
   "devDependencies": {
     "@babel/cli": "7.24.1",
-    "@babel/core": "7.24.3",
+    "@babel/core": "7.24.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-syntax-jsx": "^7.24.1",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "7.24.1",
-    "@babel/runtime": "^7.24.1",
+    "@babel/runtime": "^7.24.4",
     "@babel/plugin-transform-modules-commonjs": "7.24.1",
     "@formatjs/cli-lib": "^6.3.8",
     "@graphql-codegen/add": "^5.0.2",
@@ -85,6 +86,7 @@
     "git-spawned-stream": "^1.0.1",
     "jest": "^29.7.0",
     "jest-expo": "^50.0.4",
+    "openapi-typescript": "^6.7.5",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.2.5",
@@ -94,7 +96,7 @@
     "tagged-versions": "^1.3.0",
     "ts-jest": "^29.1.2",
     "turbo": "^1.13.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   },
   "resolutions": {
     "@types/react": "^18.2.67",
