--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -31,29 +31,20 @@
     "definition:watch"
   ],
   "dependencies": {
-    "@azzapp/i18n": "0.5.5-canary.228",
     "@azzapp/shared": "0.5.5-canary.228",
-    "@graphql-tools/schema": "^10.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.16.0",
-    "better-sqlite3": "9.4.3",
-    "dataloader": "^2.2.2",
-    "drizzle-orm": "^0.30.6",
-    "graphql": "^16.8.0",
-    "graphql-middleware": "^6.1.35",
-    "graphql-relay": "^0.10.0",
-    "graphql-scalars": "^1.22.2",
-    "graphql-shield": "^7.6.5",
-    "graphql-tag": "^2.12.6",
+    "drizzle-orm": "^0.30.8",
     "lodash": "^4.17.21",
-    "zod": "^3.22.4"
+    "zod": "^3.22.5"
   },
   "devDependencies": {
+    "better-sqlite3": "^9.5.0",
     "@types/better-sqlite3": "7.6.9",
-    "@types/lodash": "4.14.197",
+    "@types/lodash": "4.17.0",
     "@types/node-fetch": "2.6.11",
     "drizzle-kit": "0.20.14",
     "node-fetch": "^3",
-    "mysql2": "^2.3.0"
+    "mysql2": "^3.9.6"
   }
 }
