--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -33,6 +33,7 @@
     "@azzapp/i18n": "0.5.5-canary.228",
     "@azzapp/shared": "0.5.5-canary.228",
     "@azzapp/data": "0.5.5-canary.228",
+    "@azzapp/payment": "0.5.5-canary.228",
     "@graphql-tools/schema": "^10.0.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "dataloader": "^2.2.2",
@@ -43,7 +44,7 @@
     "graphql-shield": "^7.6.5",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
-    "zod": "^3.22.4",
+    "zod": "^3.22.5",
     "expiry-map": "^2.0.0"
   },
   "devDependencies": {
