--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "test": "jest",
     "typecheck": "tsc -p tsconfig.next.json --noEmit",
-    "clean": "rm -rf lib && rm -f tsconfig.tsbuildinfo && rm -rf .next && rm -rf node_modules",
+    "clean": "rm -rf lib && rm -f tsconfig.next.tsbuildinfo && rm -rf .next && rm -rf node_modules",
     "persist-queries": "node ./scripts/persistQueries.js"
   },
   "devScripts": [
@@ -19,6 +19,7 @@
     "@azzapp/i18n": "0.5.5-canary.228",
     "@azzapp/shared": "0.5.5-canary.228",
     "@azzapp/schema": "0.5.5-canary.228",
+    "@azzapp/payment": "0.5.5-canary.228",
     "@conform-to/react": "^1.1.0",
     "@conform-to/zod": "^1.1.0",
     "@envelop/dataloader": "^6.0.0",
@@ -32,43 +33,43 @@
     "@graphql-yoga/plugin-persisted-operations": "^3.3.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sendgrid/mail": "^8.1.3",
-    "@sentry/nextjs": "^7.109.0",
-    "@sentry/tracing": "^7.109.0",
-    "@upstash/ratelimit": "^1.0.1",
+    "@sentry/nextjs": "^7.111.0",
+    "@sentry/tracing": "^7.111.0",
+    "@upstash/ratelimit": "^1.1.1",
     "@vercel/kv": "^1.0.1",
     "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
     "encoding": "^0.1.13",
     "google-wallet": "^1.0.18",
     "graphql-yoga": "^5.3.0",
-    "jose": "^5.2.3",
+    "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lz-string": "^1.5.0",
-    "next": "^14.1.4",
+    "next": "^14.2.2",
     "next-axiom": "^1.1.1",
-    "next-cloudinary": "^6.3.0",
+    "next-cloudinary": "^6.5.1",
     "os-browserify": "^0.3.0",
     "passkit-generator": "^3.1.11",
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.6.4",
+    "react-intl": "^6.6.5",
     "semver": "^7.6.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "stream-browserify": "^3.0.0",
-    "twilio": "^5.0.2"
+    "twilio": "^5.0.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.23",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@vanilla-extract/dynamic": "^2.1.0",
     "@vanilla-extract/next-plugin": "^2.4.0"
   }
