--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -5,6 +5,7 @@
       "@azzapp/shared/*": ["../shared/src/*"],
       "@azzapp/data/*": ["../data/src/*"],
       "@azzapp/schema/*": ["../schema/src/*"],
+      "@azzapp/payment/*": ["../payment/src/*"],
       "#*": ["./src/*"],
     }
   }
