--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
       "dependsOn": ["//#relay:build"]
     },
     "//#relay:build": {
-      "dependsOn": ["relay:prepare", "graphql-codegen"],
+      "dependsOn": ["relay:prepare", "graphql-codegen", "payment-api-client"],
       "inputs": ["packages/**/*.{js,jsx,ts,tsx}", "schema.graphql"],
       "outputs": [
         "packages/app/src/relayArtifacts/**",
@@ -20,6 +20,12 @@
     "//#graphql-codegen": {
       "dependsOn": [],
       "inputs": ["packages/**/*.graphql"],
+      "cache": false
+    },
+    "//#payment-api-client": {
+      "passThroughEnv": ["PAYMENT_API_URL"],
+      "dependsOn": [],
+      "inputs": [],
       "cache": false
     }
   },
